Keep scrollbar to fix page jumping

--- a/sass/custom/_overrides.scss
+++ b/sass/custom/_overrides.scss
@@ -6,6 +6,9 @@ body.admin-bar{
 	//margin-top:32px;
 }
 
+html {
+    overflow-y: scroll; 
+}
 
 .editors-wrap {
 	padding-top:40px;
