--- a/style.css
+++ b/style.css
@@ -541,6 +541,9 @@ object {
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
+html {
+  overflow-y: scroll; }
+
 .editors-wrap {
   padding-top: 40px;
   padding-bottom: 40px;
